--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node web-server/server.js"
+    "start": "node web-server/server.js",
+    "build": "webpack",
+    "build:watch": "webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -18,13 +20,23 @@
   },
   "homepage": "https://github.com/Talu58/super-journey#readme",
   "dependencies": {
+    "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "express": "^4.15.2",
+    "history": "^4.6.1",
     "node": "0.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
+    "webpack": "^2.3.2"
+  },
+  "devDependencies": {
+    "css-loader": "^0.27.3",
+    "node-sass": "^4.5.1",
+    "sass-loader": "^6.0.3",
+    "style-loader": "^0.16.0",
     "webpack": "^2.3.2"
   }
 }
