--- a/package.json
+++ b/package.json
@@ -30,9 +30,13 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
+    "react-router": "^4.0.0",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "webpack": "^2.3.2"
   },
   "devDependencies": {
+    "babel-preset-stage-2": "^6.22.0",
     "css-loader": "^0.27.3",
     "node-sass": "^4.5.1",
     "sass-loader": "^6.0.3",
