--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "express": "^4.15.2",
+    "firebase": "^3.7.3",
     "history": "^4.6.1",
     "node": "0.0.0",
     "react": "^15.4.2",
