--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "express": "^4.15.2",
-    "firebase": "^3.7.3",
     "history": "^4.6.1",
+    "mongodb": "^2.2.25",
+    "mongoose": "^4.9.2",
     "node": "0.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
