--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   },
   "homepage": "https://github.com/Talu58/super-journey#readme",
   "dependencies": {
+    "axios": "^0.15.3",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
+    "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "history": "^4.6.1",
     "mongodb": "^2.2.25",
