--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongodb": "^2.2.25",
     "mongoose": "^4.9.2",
     "node": "0.0.0",
+    "nodemon": "^1.11.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
