--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node web-server/server.js",
+    "start": "nodemon web-server/server.js",
     "build": "webpack",
     "build:watch": "webpack --watch"
   },
