--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "history": "^4.6.1",
+    "jsonwebtoken": "^7.3.0",
     "mongodb": "^2.2.25",
     "mongoose": "^4.9.2",
     "node": "0.0.0",
