--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.15.2",
     "history": "^4.6.1",
     "jsonwebtoken": "^7.3.0",
+    "lodash": "^4.17.4",
     "mongodb": "^2.2.25",
     "mongoose": "^4.9.2",
     "node": "0.0.0",
