--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "file-loader": "^0.11.1",
     "history": "^4.6.1",
     "jsonwebtoken": "^7.3.0",
     "lodash": "^4.17.4",
