--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lodash": "^4.17.4",
     "mongodb": "^2.2.25",
     "mongoose": "^4.9.2",
+    "multer": "^1.3.0",
     "node": "0.0.0",
     "nodemon": "^1.11.0",
     "react": "^15.4.2",
