--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "react-router-dom": "^4.0.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
+    "socket.io": "^1.7.3",
+    "socket.io-client": "^1.7.3",
     "webpack": "^2.3.2"
   },
   "devDependencies": {
