--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "history": "^4.6.1",
     "jsonwebtoken": "^7.3.0",
     "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "mongodb": "^2.2.25",
     "mongoose": "^4.9.2",
     "multer": "^1.3.0",
