--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "bcrypt": "^1.0.2",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
+    "dotenv": "^4.0.0",
+    "dotenv-webpack": "^1.4.3",
     "express": "^4.15.2",
     "file-loader": "^0.11.1",
     "history": "^4.6.1",
