--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
     "dotenv": "^4.0.0",
+    "dotenv-safe": "^4.0.3",
     "dotenv-webpack": "^1.4.3",
     "express": "^4.15.2",
     "file-loader": "^0.11.1",
